# bong_clicker_test

backend/: README.md  pyproject.toml
backend/src/: .env  __main__.py  clickerdb.sqlite3  config_reader.py
backend/src/bot/: __init__.py  handlers.py
backend/src/db/models/: user.py
frontend/clicker/: index.html  package-lock.json  package.json
frontend/clicker/src/: index.css
frontend/clicker/src/api/: request.ts
frontend/clicker/src/components/: App.css  App.tsx
